[tool.poetry]
name = "setuptools-utils"
version = "0.1.0"
description = "A collection of utilities to be used in setup.py"
authors = ["Thibaut Frain <thibaut.frain@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
furl = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
